Closed Bug 616137 Opened 14 years ago Closed 13 years ago

Failing to parse attribute selector should skip to the next ']'

Categories

(Core :: CSS Parsing and Computation, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla5

People

(Reporter: bzbarsky, Assigned: bzbarsky)

References

Details

Attachments

(1 file)

Patch + test coming up
Whiteboard: [need review]
Attachment #494728 - Flags: review?(dbaron)
Comment on attachment 494728 [details] [diff] [review]
Skip to the nearest ']' when parsing an attr selector fails.

r=dbaron
Attachment #494728 - Flags: review?(dbaron) → review+
Attachment #494728 - Flags: approval2.0?
Whiteboard: [need review] → [need aproval]
Whiteboard: [need aproval] → [need approval]
Comment on attachment 494728 [details] [diff] [review]
Skip to the nearest ']' when parsing an attr selector fails.

I think we should hold this until the next cycle; we're often surprised by things that break as a result of parsing quirks.
Attachment #494728 - Flags: approval2.0? → approval2.0-
Whiteboard: [need approval] → [need gk2 ship]
http://hg.mozilla.org/projects/birch/rev/52e34cbb1d4e
Whiteboard: [need gk2 ship] → fixed-in-birch
https://hg.mozilla.org/mozilla-central/rev/52e34cbb1d4e
Status: NEW → RESOLVED
Closed: 13 years ago
OS: Mac OS X → All
Hardware: x86 → All
Resolution: --- → FIXED
Whiteboard: fixed-in-birch
Target Milestone: --- → mozilla2.2
Flags: in-testsuite+
Depends on: 651266
You need to log in before you can comment on or make changes to this bug.