Bug 616137.  Skip to the nearest ']' when parsing an attr selector fails.  r=dbaron